<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cave_background"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TextView
        android:id="@+id/courseLink"
        android:layout_width="660dp"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:backgroundTint="#0000ffff"
        android:fontFamily="@font/merienda_one"
        android:text="@string/hyper_link"
        android:textColor="#FFFFFF"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.945"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.683" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/berkshire_swash"
        android:text="@string/gem_quest_how_to_play"
        android:textColor="#00FFE7"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.464"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.018" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/berkshire_swash"
        android:text="@string/author"
        android:textColor="#00FFE7"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.469"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/berkshire_swash"
        android:text="@string/resources"
        android:textColor="#00FFE7"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.479"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.834" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="660dp"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:backgroundTint="#0000ffff"
        android:fontFamily="@font/merienda_one"
        android:text="@string/first_on_a_selected_board_you_would_click_on_each_cells_of_the_board_to_see_if_a_gem_is_hidden_in_it_n_if_there_is_no_gem_in_a_cell_a_number_which_indicates_the_total_hidden_gems_throughout_the_row_and_column_of_the_clicked_cell_would_be_shown_n_if_a_gem_was_found_you_ll_be_one_step_closer_to_finding_all_the_gems_n_a_gem_can_also_be_clicked_on_to_see_the_number_of_hidden_gem_in_its_row_and_column"
        android:textColor="#FFFFFF"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.945"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.221" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="660dp"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:backgroundTint="#0000ffff"
        android:fontFamily="@font/merienda_one"
        android:text="@string/written_by_emmanuel_okonkwo_for_cmpt_276_intro_to_software_engineering"
        android:textColor="#FFFFFF"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.945"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.61" />

    <TextView
        android:id="@+id/linkImages"
        android:layout_width="660dp"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:backgroundTint="#0000ffff"
        android:fontFamily="@font/merienda_one"
        android:text="@string/images"
        android:textColor="#FFFFFF"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.945"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.959" />

</androidx.constraintlayout.widget.ConstraintLayout>